Revert "Fixes and updates"
This reverts commit b739af043b71f42ea16cf01e142f30ef9738980f.